tests/negative/slice_inline_oob_index_assign.far
fun main() -> i64 {
  a = [1, 2, 3, 4, 5]
  a.slice(1, 4)[3] = 99
  return 0
}
